Source/WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp
@@ -519,10 +519,6 @@ void FrameLoaderClientQt::dispatchDidFinishLoad()
     // Clears the previous error.
     m_loadError = ResourceError();
 
-    // The requested URL will be available in the document loader that just finished, so we
-    // don't need to keep it anymore.
-    m_lastRequestedUrl = KURL();
-
     if (!m_webFrame)
         return;
     m_webFrame->page()->d->updateNavigationActions();
